--- a/src/composer.json
+++ b/src/composer.json
@@ -1,10 +1,12 @@
 {
     "require": {
-        "ramsey/uuid": "^4.1"
+        "ramsey/uuid": "^4.1",
+        "symfony/console": "^5.2"
     },
     "autoload": {
         "psr-4": {
-            "EWallet\\": "EWallet/"
+            "EWallet\\": "EWallet/",
+            "Command\\": "Command/"
         }
     }
 }
